--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="parallax.min.js"></script>
 	<link rel="stylesheet" href="style.css" />
+	<link rel="icon" type="image/png" href="favicon.png" />
 	<title>Even Space</title>
 </head>
 <body>
+
+<div id="site_wrap">
 
 	<section id="main_body">
 		<div class="logo">
@@ -49,6 +52,8 @@
 			</div>
 		</div>
 	</section>
+
+</div>
 
 	<a id="bottom_bar" href="#text_section" onClick="smoothScroll();">
 		<div></div>
