--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<p>Even Space Studio<br/>478 25th Street<br/>Oakland, CA 94612</p>
 				</div>
 				<div>
-					<p><a href="https://www.instagram.com" target="_blank">Instagram</a></p>
+					<p><a href="https://www.instagram.com/even.space/" target="_blank">Instagram</a></p>
 				</div>
 			</div>
 		</div>
