--- a/index.html
+++ b/index.html
@@ -55,17 +55,19 @@
 
 </div>
 
-	<a id="bottom_bar" href="#text_section" onClick="smoothScroll();">
+	<a id="bottom_bar" href="#text_section">
 		<div></div>
 		<div></div>
 	</a>
 	<script>
-		function smoothScroll(){
-			event.preventDefault();
-		    document.querySelector('#text_section').scrollIntoView({
-		        behavior: 'smooth'
-		    });
-		}
+		$(document).ready(function(){
+			$("#bottom_bar").click(function() {
+				event.preventDefault();
+			    $('#site_wrap').animate({
+			        scrollTop: $("#text_section").offset().top
+			    }, 800);
+			});
+		})
 	</script>
 </body>
 </html>
