--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			$("#bottom_bar").click(function() {
 				event.preventDefault();
 			    $('#site_wrap').animate({
-			        scrollTop: $("#text_section").offset().top
+			        scrollTop: $("#main_body").height()
 			    }, 800);
 			});
 		})
