--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 	<div class="si-item">
 		<figure class="js si-wrap desktop">
 			<picture class="si-pic">
-				<img class="si" src="pattern-grey2.png" data-image-loading-animation>
+				<img class="si" src="pattern-grey3.jpg" data-image-loading-animation>
 			</picture>
 		</figure>
 	</div>
 	<div class="si-item">
 		<figure class="js si-wrap desktop">
 			<picture class="si-pic">
-				<img class="si" src="pattern-grey2.png" data-image-loading-animation>
+				<img class="si" src="pattern-grey3.jpg" data-image-loading-animation>
 			</picture>
 		</figure>
 	</div>
