--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
 		<div class="container">
 			<div class="top">
 				<p><i>Even Space</i> is an architectural design practice that merges a personal, collaborative approach to design with open-ended creative exploration. <i>Even Space</i> uses its experience, methodology, and warmth to guide clients through design problems: creating unique and rewarding outcomes, seeing each project as an opportunity to create an unexpected result.</p>
-				<p>For project inquiries or just to say hello, please drop us a note at <a href="info@evenspace.com">info@evenspace.com</a>.</p>
+				<p>For project inquiries or just to say hello, please drop us a note at <a href="hello@even.space">hello@even.space</a>.</p>
 			</div>
 			<div class="bottom">
 				<div>
-					<p>Even Space Studio<br/>478 25th Street<br/>Oakland, CA 94612</p>
+					<p>Even Space Studio<!--<br/>478 25th Street<br/>Oakland, CA 94612--></p>
 				</div>
 				<div>
-					<p><a href="https://www.instagram.com/even.space/" target="_blank">Instagram</a></p>
+					<p><a href="https://www.instagram.com/even.space/" target="_blank">Instagram</a><br/>
+						<a href="http://eepurl.com/iJGxww" target="_blank">Join our Mailing List</a></p>
 				</div>
 			</div>
 		</div>
@@ -49,14 +50,14 @@
 	<div class="si-item">
 		<figure class="js si-wrap desktop">
 			<picture class="si-pic">
-				<img class="si" src="pattern-grey3.jpg" data-image-loading-animation>
+				<img class="si" src="pattern-grey5.jpg" data-image-loading-animation>
 			</picture>
 		</figure>
 	</div>
 	<div class="si-item">
 		<figure class="js si-wrap desktop">
 			<picture class="si-pic">
-				<img class="si" src="pattern-grey3.jpg" data-image-loading-animation>
+				<img class="si" src="pattern-grey5-inv.jpg" data-image-loading-animation>
 			</picture>
 		</figure>
 	</div>
@@ -94,7 +95,7 @@
 				const loop = verticalLoop("#container .si-item", {
 					repeat: -1,
 					center: true,
-					speed: .2
+					speed: .6
 				});
 				let slow = gsap.to(loop, {timeScale: 0.6, duration: .7});
 				loop.timeScale(0.6);
